# KnowledgeBase

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: README.md  claude-stop-hook-capture.sh  knowledge-translate-cron.sh
scripts/: init-ops-journal.sh  reinstall-and-test.sh  test.sh
src/prokb/: __init__.py  chunker.py  cli.py  config.py  indexer.py  mcp_server.py  query.py  scanner.py
src/prokb/skills/knowledge-query/: SKILL.md
src/prokb/skills/knowledge-update/: SKILL.md
tests/: test_chunker.py  test_config.py  test_diary.py  test_indexer.py  test_scanner.py  test_scanner_diary.py
